objects/Basket__c/Basket__c.object-meta.xml
<CustomObject>
    <label>Basket</label>
    <nameField>
        <label>Basket Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Baskets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>