objects/Basket__c/fields/Goods__c.field-meta.xml
<CustomField>
    <fullName>Goods__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Goods</label>
    <referenceTo>Goods__c</referenceTo>
    <relationshipLabel>Baskets</relationshipLabel>
    <relationshipName>Baskets</relationshipName>
    <type>Lookup</type>
</CustomField>