objects/Basket__c/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <label>ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>